--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <!-- Logo -->
                 <a class="navbar-brand" href="/">
-                    <img src="assets/images/logo.png" alt="Logo">
+                    <img src="assets/images/logo-icon.png" alt="Logo">
                 </a>
 
                 <!-- Navbar Toggler for Mobile -->
