about us, services and cta section created

--- a/index.html
+++ b/index.html
@@ -71,9 +71,12 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <figure>
-                        <img class="astronut float-end" src="assets/images/astronut.png" alt="astronut">
+                    <figure class="img-fluid float-end">
+                        <img class="astronut" src="assets/images/astronut.png" alt="astronut">
                     </figure>
+                    <div class="ring-btn">
+                        <a href="#"><i class="fa-solid fa-circle"></i></a>
+                    </div>
                 </div>
                 </div>
                 <div class="marquee-container">
@@ -87,6 +90,158 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="about-section">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <div class="content">
+                        <h5 class="dot">About Us</h5>
+                        <h2><span class="different">Digitexsol</span> creative digital agency 
+                            specializes in designing and executing 
+                            innovative digital solutions to help 
+                            businesses grow. From branding and 
+                            graphic design to web development...</h2>
+                        <div class="buttons">
+                            <a href="#" class="btn btn-secondary">
+                                Explore More About
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M7 7h10v10"></path>
+                                    <path d="M7 17 17 7"></path>
+                                </svg>
+                            </a>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="service-section">
+            <div class="row">
+                <div class="content">
+                    <h1>Our Services</h1>
+                </div>
+                <!-- Left Side Categories -->
+                <div class="col-md-5 left-column">
+                    <h2><span class="different">Our</span> Services</h2>
+                    <ul class="service-list">
+                        <li class="active" data-target="development">Development<small>/01</small></li>
+                        <li data-target="it-services">IT Services & Solutions<small>/02</small></li>
+                        <li data-target="emerging-tech">Emerging Tech<small>/03</small></li>
+                        <li data-target="digital-marketing">Digital Marketing<small>/04</small></li>
+                    </ul>
+                    <div class="buttons">
+                        <a href="#" class="btn btn-secondary">
+                            Explore More Services
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M7 7h10v10"></path>
+                                <path d="M7 17 17 7"></path>
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Right Side Content -->
+                <div class="col-md-7 right-column">
+                    <!-- Development Section -->
+                    <div id="development" class="service-content active">
+                        <div class="sub-service-list">
+                            <button class="sub-service-btn active" data-image="assets/images/service-img.webp">Web Development</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Mobile App Development</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">UI/UX Design</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">E-commerce Website</button>
+                        </div>
+                        <div class="service-image">
+                            <img src="assets/images/service-img.webp" alt="Web Development">
+                        </div>
+                    </div>
+
+                    <!-- IT Services Section -->
+                    <div id="it-services" class="service-content">
+                        <div class="sub-service-list">
+                            <button class="sub-service-btn active" data-image="assets/images/service-img.webp">Cloud</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Consulting</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Security</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Support</button>
+                        </div>
+                        <div class="service-image">
+                            <img src="assets/images/service-img.webp" alt="IT Services">
+                        </div>
+                    </div>
+
+                    <!-- Emerging Tech Section -->
+                    <div id="emerging-tech" class="service-content">
+                        <div class="sub-service-list">
+                            <button class="sub-service-btn active" data-image="assets/images/service-img.webp">AI</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Blockchain</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">IoT</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Automation</button>
+                        </div>
+                        <div class="service-image">
+                            <img src="assets/images/service-img.webp" alt="Emerging Tech">
+                        </div>
+                    </div>
+
+                    <!-- Digital Marketing Section -->
+                    <div id="digital-marketing" class="service-content">
+                        <div class="sub-service-list">
+                            <button class="sub-service-btn active" data-image="assets/images/service-img.webp">SEO</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Social Media</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">Content</button>
+                            <button class="sub-service-btn" data-image="assets/images/service-img.webp">PPC</button>
+                        </div>
+                        <div class="service-image">
+                            <img src="assets/images/service-img.webp" alt="Digital Marketing">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="cta-section">
+            <div class="row align-items-top">
+                <div class="marquee-container">
+                    <div class="marquee-wrapper">
+                        <div class="marquee" id="marquee1">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee" id="marquee2">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee" id="marquee3">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee" id="marquee4">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee" id="marquee5">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-left">
+                    <figure class="img-fluid">
+                        <img class="talk-btn" src="assets/images/talk-button.png" alt="Talk Button">
+                    </figure>
+                </div>
+                <div class="col-md-6 col-right">
+                    <figure class="img-fluid">
+                        <img class="astronut" src="assets/images/cta-astronut.webp" alt="astronut">
+                    </figure>
                 </div>
             </div>
         </section>
