--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 </div>
             </div>
         </section>
+        <div class="main-bg">
         <section class="service-section">
             <div class="row">
                 <div class="content">
@@ -204,31 +205,31 @@
             <div class="row align-items-top">
                 <div class="marquee-container">
                     <div class="marquee-wrapper">
-                        <div class="marquee" id="marquee1">
+                        <div class="marquee marquee-left">
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                         </div>
                     </div>
                     <div class="marquee-wrapper">
-                        <div class="marquee" id="marquee2">
+                        <div class="marquee marquee-right">
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                         </div>
                     </div>
                     <div class="marquee-wrapper">
-                        <div class="marquee" id="marquee3">
+                        <div class="marquee marquee-left">
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                         </div>
                     </div>
                     <div class="marquee-wrapper">
-                        <div class="marquee" id="marquee4">
+                        <div class="marquee marquee-right">
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                         </div>
                     </div>
                     <div class="marquee-wrapper">
-                        <div class="marquee" id="marquee5">
+                        <div class="marquee marquee-left">
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                             <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
                         </div>
@@ -246,6 +247,7 @@
                 </div>
             </div>
         </section>
+        </div>
         <section class="portfolio-section">
             <div class="container">
                 <div class="row align-items-center">
@@ -635,7 +637,116 @@
                     </div>
                 </div>
             </div>
-        </section>        
+        </section>   
+        <section class="client-section">
+            <div class="container">
+                <div class="row align-items-center text-center">
+                    <div class="col-md-12">
+                        <div class="video-container">
+                            <video autoplay loop muted>
+                                <source src="assets/videos/ps-banner.mp4" type="video/mp4">
+                            </video>
+                         </div>
+                        <div class="content">
+                        <h5 class="dot">Our Clients</h5>
+                        <h2><span class="different">Elevate</span> Your Brand</h2>
+                        </div>
+                         <!-- Logos Grid -->
+                        <div class="logos-grid">
+                            <div class="row">
+                                <div class="col-3"><img src="assets/images/lg-01.png" alt="logo1"></div>
+                                <div class="col-3"><img src="assets/images/lg-02.png" alt="logo2"></div>
+                                <div class="col-3"><img src="assets/images/lg-03.png" alt="logo3"></div>
+                                <div class="col-3"><img src="assets/images/lg-04.png" alt="logo4"></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-3"><img src="assets/images/lg-05.png" alt="logo5"></div>
+                                <div class="col-3"><img src="assets/images/lg-06.png" alt="logo6"></div>
+                                <div class="col-3"><img src="assets/images/lg-07.png" alt="logo7"></div>
+                                <div class="col-3"><img src="assets/images/lg-08.png" alt="logo8"></div>
+                            </div>
+                            <div class="row">
+                                <div class="col-3"><img src="assets/images/lg-09.png" alt="logo9"></div>
+                                <div class="col-3"><img src="assets/images/lg-10.png" alt="logo10"></div>
+                                <div class="col-3"><img src="assets/images/lg-11.png" alt="logo11"></div>
+                                <div class="col-3"><img src="assets/images/lg-12.png " alt="logo12"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <figure class="img-fluid">
+                        <img class="rocket" src="assets/images/Rocket.png" alt="Rocket">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section class="get-section">
+            <div class="row align-items-center">
+                <div class="marquee-container">
+                    <div class="marquee-wrapper">
+                        <div class="marquee marquee-left">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee marquee-right">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee marquee-left">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee marquee-right">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                    <div class="marquee-wrapper">
+                        <div class="marquee marquee-left">
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                            <span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span><span>GET IN TOUCH</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-left">
+                    <div class="col-inner">
+                        <div class="content">
+                            <h5 class="dot">Contact Us</h5>
+                            <h2><span class="different">Get</span> In Touch</h2>
+                        </div>
+                        <form class="get-form">
+                            <div class="form-group">
+                                <input type="text" placeholder="Name" required>
+                                <input type="email" placeholder="Email Address" required>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" placeholder="How Did You Hear About Us">
+                                <input type="text" placeholder="What are you seeking for?">
+                            </div>
+                            <div class="form-group">
+                                <textarea placeholder="Message" rows="4" required></textarea>
+                            </div>
+                            <a type="submit" class="btn btn-secondary">Book Your 10 Minutes Free Consultation
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <path d="M7 7h10v10"></path>
+                                    <path d="M7 17 17 7"></path>
+                                </svg>
+                            </a>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-6 col-right">
+                    <figure class="img-fluid">
+                        <img class="get-img" src="assets/images/get-img.webp" alt="astronut">
+                    </figure>
+                </div>
+            </div>
+        </section>     
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
