--- a/index.html
+++ b/index.html
@@ -1434,7 +1434,203 @@
           </div>
         </div>
       </section>
+      <section class="faq-section">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6 col-left">
+              <div class="col-inner">
+                <div class="content">
+                  <h5 class="dot">FAQ’s</h5>
+                  <h2>
+                    <span class="different">Connecting<br /></span> Your Brand
+                    to Global Markets
+                  </h2>
+                  <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-right">
+              <div class="buttons">
+                <a href="#" class="btn btn-secondary">
+                  Explore More
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <path d="M7 7h10v10"></path>
+                    <path d="M7 17 17 7"></path>
+                  </svg>
+                </a>
+              </div>
+              <div class="faq-container">
+                <div class="faq">
+                  <div class="faq-item">
+                    <button class="faq-question">
+                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit sed?
+                    </button>
+                    <div class="faq-answer">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        sed.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="faq-item">
+                    <button class="faq-question">
+                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit sed?
+                    </button>
+                    <div class="faq-answer">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        sed.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="faq-item">
+                    <button class="faq-question">
+                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit sed?
+                    </button>
+                    <div class="faq-answer">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        sed.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="faq-item">
+                    <button class="faq-question">
+                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit sed?
+                    </button>
+                    <div class="faq-answer">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        sed.
+                      </p>
+                    </div>
+                  </div>
+                  <div class="faq-item">
+                    <button class="faq-question">
+                      <span class="icon">+</span> Lorem ipsum dolor sit amet,
+                      consectetur adipiscing elit sed?
+                    </button>
+                    <div class="faq-answer">
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        sed.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer>
+      <div class="container footer-content">
+        <div class="row">
+          <!-- Logo -->
+          <div class="col-12 footer-logo">
+            <img src="assets/images/logo-icon.png" alt="Digitexsol Logo" />
+          </div>
+        </div>
+        <div class="row menu-col">
+          <!-- Services Column 1 -->
+          <div class="col-md-3">
+            <h4>Services</h4>
+            <ul class="footer-links">
+              <li><a href="#">Animation</a></li>
+              <li><a href="#">2D Animation</a></li>
+              <li><a href="#">3D Animation</a></li>
+              <li><a href="#">Motion Graphics</a></li>
+              <li><a href="#">Whiteboard</a></li>
+              <li><a href="#">Logo Animation</a></li>
+              <li><a href="#">Digital Marketing</a></li>
+            </ul>
+          </div>
+
+          <!-- Services Column 2 -->
+          <div class="col-md-3">
+            <h4>Services</h4>
+            <ul class="footer-links">
+              <li><a href="#">Video Editing</a></li>
+              <li><a href="#">Web Design</a></li>
+              <li><a href="#">Logo Design</a></li>
+              <li><a href="#">Mobile app</a></li>
+              <li><a href="#">Development</a></li>
+              <li><a href="#">SEO</a></li>
+              <li><a href="#">SMM</a></li>
+            </ul>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-md-3">
+            <h4>Quick Links</h4>
+            <ul class="footer-links">
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Contact Us</a></li>
+            </ul>
+
+            <div class="address">
+              <h4>Address</h4>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod
+              </p>
+            </div>
+          </div>
+
+          <!-- About Us -->
+          <div class="col-md-3">
+            <h4>About Us</h4>
+            <ul class="footer-links">
+              <li><a href="#">Services</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Focus</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row copyright text-center">
+          <div class="col-12">
+            <p>All Rights Reserved 2025 - Digitexsol.</p>
+            <!-- Payment Methods -->
+            <div class="payment-methods">
+              <img src="assets/images/payment-method.png" alt="Visa" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Earth and astronaut Image -->
+      <figure class="ftr-img">
+        <img
+          src="assets/images/ftr-astronut.png"
+          alt="Astronaut"
+          class="astronaut-img"
+        />
+        <img src="assets/images/earth.webp" alt="Earth" class="earth-img" />
+      </figure>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
