--- a/index.html
+++ b/index.html
@@ -1544,14 +1544,11 @@
       </section>
     </main>
 
+    <div class="footer-logo">
+      <img src="assets/images/logo-icon.png" alt="" />
+    </div>
     <footer>
       <div class="container footer-content">
-        <div class="row">
-          <!-- Logo -->
-          <div class="col-12 footer-logo">
-            <img src="assets/images/logo-icon.png" alt="Digitexsol Logo" />
-          </div>
-        </div>
         <div class="row menu-col">
           <!-- Services Column 1 -->
           <div class="col-md-3">
