clients logo updated

--- a/index.html
+++ b/index.html
@@ -1249,28 +1249,28 @@
               <div class="logos-grid">
                 <div class="row">
                   <div class="col-3">
-                    <img src="assets/images/lg-01.svg" alt="logo1" />
+                    <img src="assets/images/client-1.webp" alt="logo1" />
                     <div class="logo-text">
                       We helped them with a responsive yet attractive web design
                       development.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-02.svg" alt="logo2" />
+                    <img src="assets/images/client-12.webp" alt="logo2" />
                     <div class="logo-text">
                       We provided them with a fully customized Website aiming to
                       make their business thrive.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-03.svg" alt="logo3" />
+                    <img src="assets/images/client-15.svg" alt="logo3" />
                     <div class="logo-text">
                       Our Developer created a website for their streamlined
                       education process.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-04.svg" alt="logo4" />
+                    <img src="assets/images/client-4.webp" alt="logo4" />
                     <div class="logo-text">
                       Developed and designed a fully customized website for an
                       unbeatable user experience.
@@ -1279,28 +1279,28 @@
                 </div>
                 <div class="row">
                   <div class="col-3">
-                    <img src="assets/images/lg-05.svg" alt="logo5" />
+                    <img src="assets/images/client-18.webp" alt="logo5" />
                     <div class="logo-text">
                       Our interactive web design and development helped them to
                       enhance their UX.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-06.svg" alt="logo6" />
+                    <img src="assets/images/client-6.svg" alt="logo6" />
                     <div class="logo-text">
                       Our website design and development services helped them to
                       showcase their brand.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-07.svg" alt="logo7" />
+                    <img src="assets/images/client-7.svg" alt="logo7" />
                     <div class="logo-text">
                       Our website design and development services helped them to
                       showcase their brand.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-08.svg" alt="logo8" />
+                    <img src="assets/images/client-8.webp" alt="logo8" />
                     <div class="logo-text">
                       We did a bespoke website design and development for them.
                     </div>
@@ -1308,27 +1308,27 @@
                 </div>
                 <div class="row">
                   <div class="col-3">
-                    <img src="assets/images/lg-09.svg" alt="logo9" />
+                    <img src="assets/images/client-9.webp" alt="logo9" />
                     <div class="logo-text">
                       We designed and developed a dependable website for their
                       better brand image.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-10.svg" alt="logo10" />
+                    <img src="assets/images/client-10.svg" alt="logo10" />
                     <div class="logo-text">
                       Their website developed by us, helped them to maximize
                       their brand value.
                     </div>
                   </div>
                   <div class="col-3">
-                    <img src="assets/images/lg-11.svg" alt="logo11" />
+                    <img src="assets/images/client-14.webp" alt="logo11" />
                     <div class="logo-text">
                       We created a well-crafted and attractive website for
                       better brand development.
                     </div>
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 globe">
                     <img src="assets/images/globe.gif " alt="logo12" />
                     <div class="logo-text">200+ Clients worldwide</div>
                   </div>
