--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.19/dist/lenis.css" />
     <link
       rel="shortcut icon"
       href="assets/images/logo-icon.png"
@@ -77,10 +78,8 @@
               <div class="content">
                 <h5>Digitexsol</h5>
                 <h1><span class="different">Digital</span> Agency</h1>
-                <h4>
-                  Innovative Digital Agency<br />
-                  Crafting Impacful Designs, Branding, And
-                </h4>
+                <h4>Innovative Digital Agency <br>
+Crafting Impacful Designs, Branding, And</h4>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary">
                     Explore More
@@ -158,12 +157,7 @@
             <div class="col-md-12">
               <div class="content">
                 <h5 class="dot">About Us</h5>
-                <h2>
-                  <span class="different">Digitexsol</span> creative digital
-                  agency specializes in designing and executing innovative
-                  digital solutions to help businesses grow. From branding and
-                  graphic design to web development...
-                </h2>
+                <h2><span class="different">Digitexsol </span>creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</h2>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary">
                     Explore More About
@@ -1633,6 +1627,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://unpkg.com/lenis@1.1.19/dist/lenis.min.js"></script>
     <script src="custom.js"></script>
   </body>
 </html>
