--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
       <section class="hero-section">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 col-lft">
+            <div class="col-md-6 col-lft lft-col">
               <div class="content">
                 <h5>Digitexsol</h5>
                 <h1><span class="different">Digital</span> Agency</h1>
-                <h4>Innovative Digital Agency <br>
-Crafting Impacful Designs, Branding, And</h4>
+                <h4>Innovative Digital Agency <br>Crafting Impacful Designs, Branding, And</h4>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary">
                     Explore More
@@ -118,7 +117,7 @@ Crafting Impacful Designs, Branding, And</h4>
                 </div>
               </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 rgt-col">
               <figure class="img-fluid float-end">
                 <img
                   class="astronut"
@@ -151,13 +150,13 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="about-section">
+      <section class="about-section animated-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-12">
               <div class="content">
                 <h5 class="dot">About Us</h5>
-                <h2><span class="different">Digitexsol </span>creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</h2>
+                <h2><span class="different">Digitexsol </span><span class="animated-heading">creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</span></h2>
                 <div class="buttons">
                   <a href="#" class="btn btn-secondary">
                     Explore More About
@@ -183,13 +182,13 @@ Crafting Impacful Designs, Branding, And</h4>
         </div>
       </section>
       <div class="main-bg">
-        <section class="service-section">
+        <section class="service-section animated-section">
           <div class="row">
             <div class="content">
               <h1>Our Services</h1>
             </div>
             <!-- Left Side Categories -->
-            <div class="col-md-5 left-column">
+            <div class="col-md-5 left-column lft-col">
               <h2><span class="different">Our</span> Services</h2>
               <ul class="service-list">
                 <li class="active" data-target="development">
@@ -227,7 +226,7 @@ Crafting Impacful Designs, Branding, And</h4>
             </div>
 
             <!-- Right Side Content -->
-            <div class="col-md-7 right-column">
+            <div class="col-md-7 right-column rgt-col">
               <!-- Development Section -->
               <div id="development" class="service-content active">
                 <div class="sub-service-list">
@@ -371,7 +370,7 @@ Crafting Impacful Designs, Branding, And</h4>
             </div>
           </div>
         </section>
-        <section class="cta-section">
+        <section class="cta-section animated-section">
           <div class="row align-items-top">
             <div class="marquee-container">
               <div class="marquee-wrapper">
@@ -415,7 +414,7 @@ Crafting Impacful Designs, Branding, And</h4>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-left">
+            <div class="col-md-6 col-left lft-col">
               <figure class="img-fluid">
                 <img
                   class="talk-btn"
@@ -424,7 +423,7 @@ Crafting Impacful Designs, Branding, And</h4>
                 />
               </figure>
             </div>
-            <div class="col-md-6 col-right">
+            <div class="col-md-6 col-right rgt-col">
               <figure class="img-fluid">
                 <img
                   class="astronut"
@@ -436,7 +435,7 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </section>
       </div>
-      <section class="portfolio-section">
+      <section class="portfolio-section animated-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6">
@@ -1020,7 +1019,7 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="logo-section">
+      <section class="logo-section animated-section">
         <div class="container">
           <div class="row align-items-center text-center">
             <div class="col-md-12">
@@ -1035,7 +1034,7 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="review-section">
+      <section class="review-section animated-section">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-8">
@@ -1081,11 +1080,14 @@ Crafting Impacful Designs, Branding, And</h4>
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Mark</span> Johns</h3>
+                  <h3><span class="different">Bailey</span> Peters</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    Hats off to Zain!His creative genius shone
+                    through in our brand's digital makeover. The
+                    attention to detail and the understanding of
+                    our vision were impeccable. The new look has 
+                    elevated our brand presence, and we've received 
+                    numerous compliments. A big thumbs up!
                   </p>
                 </div>
               </div>
@@ -1100,11 +1102,11 @@ Crafting Impacful Designs, Branding, And</h4>
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Emilia</span> Mark</h3>
+                  <h3><span class="different">Billy</span> French</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    The visuals created resonated with our audience,
+                    and we've seen a positive impact on brand perception. 
+                    Thanks to the team.
                   </p>
                 </div>
               </div>
@@ -1119,11 +1121,13 @@ Crafting Impacful Designs, Branding, And</h4>
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Edward</span> Smith</h3>
+                  <h3><span class="different">Josh</span> O'Neill</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    I hired Digitexsol to run ads on Facebook, and
+                    wow, the outcome was amazing! Max was in charge,
+                    and our investment really paid off. The ads were 
+                    super attractive, and they reached exactly the right
+                    people. It totally transformed our online cosmetic store!
                   </p>
                 </div>
               </div>
@@ -1138,11 +1142,13 @@ Crafting Impacful Designs, Branding, And</h4>
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Olivia</span> Kavin</h3>
+                  <h3><span class="different">Sarah</span> Johnson</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    Digitex Sol's strategic digital marketing
+                    approach delivered exceptional results.
+                    Our lead generation doubled in just a few
+                    months, and their attention to detail truly
+                    stood out.
                   </p>
                 </div>
               </div>
@@ -1226,13 +1232,13 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="client-section">
+      <section class="client-section animated-section">
         <div class="container">
           <div class="row align-items-center text-center">
             <div class="col-md-12">
               <div class="video-container">
                 <video autoplay loop muted>
-                  <source src="assets/videos/ps-banner.mp4" type="video/mp4" />
+                  <source src="assets/videos/ps-bg.mp4" type="video/mp4" />
                 </video>
               </div>
               <div class="content">
@@ -1335,7 +1341,7 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="get-section">
+      <section class="get-section animated-section">
         <div class="row align-items-center">
           <div class="marquee-container">
             <div class="marquee-wrapper">
@@ -1379,7 +1385,7 @@ Crafting Impacful Designs, Branding, And</h4>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-left">
+          <div class="col-md-6 col-left lft-col">
             <div class="col-inner">
               <div class="content">
                 <h5 class="dot">Contact Us</h5>
@@ -1417,7 +1423,7 @@ Crafting Impacful Designs, Branding, And</h4>
               </form>
             </div>
           </div>
-          <div class="col-md-6 col-right">
+          <div class="col-md-6 col-right rgt-col">
             <figure class="img-fluid">
               <img
                 class="get-img"
@@ -1428,10 +1434,10 @@ Crafting Impacful Designs, Branding, And</h4>
           </div>
         </div>
       </section>
-      <section class="faq-section">
+      <section class="faq-section animated-section">
         <div class="container">
           <div class="row align-items-center">
-            <div class="col-md-6 col-left">
+            <div class="col-md-6 col-left lft-col">
               <div class="col-inner">
                 <div class="content">
                   <h5 class="dot">FAQ’s</h5>
@@ -1448,7 +1454,7 @@ Crafting Impacful Designs, Branding, And</h4>
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-right">
+            <div class="col-md-6 col-right rgt-col">
               <div class="buttons">
                 <a href="#" class="btn btn-secondary">
                   Explore More
@@ -1541,7 +1547,7 @@ Crafting Impacful Designs, Branding, And</h4>
     <div class="footer-logo">
       <img src="assets/images/logo-icon.png" alt="" />
     </div>
-    <footer>
+    <footer class="animated-section">
       <div class="container footer-content">
         <div class="row menu-col">
           <!-- Services Column 1 -->
@@ -1617,9 +1623,9 @@ Crafting Impacful Designs, Branding, And</h4>
         <img
           src="assets/images/ftr-astronut.png"
           alt="Astronaut"
-          class="astronaut-img"
+          class="astronaut-img lft-col"
         />
-        <img src="assets/images/earth.webp" alt="Earth" class="earth-img" />
+        <img src="assets/images/earth.webp" alt="Earth" class="earth-img rgt-col" />
       </figure>
     </footer>
 
