all animation changes done

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
           <!-- Right Side Buttons -->
           <div class="d-flex align-items-center">
-            <a href="tel: 123 456 7890" class="btn"
+            <a href="tel: 123 456 7890" class="btn rotating-border-button"
               ><i class="fa-solid fa-phone"></i> 123 456 7890</a
             >
           </div>
@@ -80,7 +80,7 @@
                 <h1><span class="different">Digital</span> Agency</h1>
                 <h4>Innovative Digital Agency <br>Crafting Impacful Designs, Branding, And</h4>
                 <div class="buttons">
-                  <a href="#" class="btn btn-secondary">
+                  <a href="#" class="btn btn-secondary rotating-border-button">
                     Explore More
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -97,7 +97,7 @@
                       <path d="M7 17 17 7"></path>
                     </svg>
                   </a>
-                  <a href="#" class="btn btn-secondary">
+                  <a href="#" class="btn btn-secondary rotating-border-button">
                     Request A Quote
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -158,7 +158,7 @@
                 <h5 class="dot">About Us</h5>
                 <h2><span class="different">Digitexsol </span><span class="animated-heading">creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</span></h2>
                 <div class="buttons">
-                  <a href="#" class="btn btn-secondary">
+                  <a href="#" class="btn btn-secondary rotating-border-button">
                     Explore More About
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -205,7 +205,7 @@
                 </li>
               </ul>
               <div class="buttons">
-                <a href="#" class="btn btn-secondary">
+                <a href="#" class="btn btn-secondary rotating-border-button">
                   Explore More Services
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -238,19 +238,19 @@
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/mobile-development.webp"
                   >
                     Mobile App Development
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/ui-development.webp"
                   >
                     UI/UX Design
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/ecommerce-development.webp"
                   >
                     E-commerce Website
                   </button>
@@ -268,31 +268,31 @@
                 <div class="sub-service-list">
                   <button
                     class="sub-service-btn active"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/cloud.webp"
                   >
                     Cloud
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/consulting.webp"
                   >
                     Consulting
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/security.webp"
                   >
                     Security
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/support.webp"
                   >
                     Support
                   </button>
                 </div>
                 <div class="service-image">
-                  <img src="assets/images/service-img.webp" alt="IT Services" />
+                  <img src="assets/images/cloud.webp" alt="IT Services" />
                 </div>
               </div>
 
@@ -301,32 +301,32 @@
                 <div class="sub-service-list">
                   <button
                     class="sub-service-btn active"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/ai.webp"
                   >
                     AI
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/bloackchain.webp"
                   >
                     Blockchain
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/iot.webp"
                   >
                     IoT
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/automation.webp"
                   >
                     Automation
                   </button>
                 </div>
                 <div class="service-image">
                   <img
-                    src="assets/images/service-img.webp"
+                    src="assets/images/ai.webp"
                     alt="Emerging Tech"
                   />
                 </div>
@@ -337,32 +337,32 @@
                 <div class="sub-service-list">
                   <button
                     class="sub-service-btn active"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/seo.webp"
                   >
                     SEO
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/social-media.webp"
                   >
                     Social Media
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/content.webp"
                   >
                     Content
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/service-img.webp"
+                    data-image="assets/images/ppc.webp"
                   >
                     PPC
                   </button>
                 </div>
                 <div class="service-image">
                   <img
-                    src="assets/images/service-img.webp"
+                    src="assets/images/seo.webp"
                     alt="Digital Marketing"
                   />
                 </div>
@@ -446,7 +446,7 @@
             </div>
             <div class="col-md-6">
               <div class="buttons">
-                <a href="#" class="btn btn-secondary">
+                <a href="#" class="btn btn-secondary rotating-border-button">
                   Explore Case Study
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -1045,7 +1045,7 @@
             </div>
             <div class="col-md-4">
               <div class="buttons">
-                <a href="#" class="btn btn-secondary">
+                <a href="#" class="btn btn-secondary rotating-border-button">
                   More Reviews
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -1163,11 +1163,14 @@
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Mark</span> Johns</h3>
+                  <h3><span class="different">Bailey</span> Peters</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    Hats off to Zain!His creative genius shone
+                    through in our brand's digital makeover. The
+                    attention to detail and the understanding of
+                    our vision were impeccable. The new look has 
+                    elevated our brand presence, and we've received 
+                    numerous compliments. A big thumbs up!
                   </p>
                 </div>
               </div>
@@ -1182,11 +1185,11 @@
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Emilia</span> Mark</h3>
+                  <h3><span class="different">Billy</span> French</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    The visuals created resonated with our audience,
+                    and we've seen a positive impact on brand perception. 
+                    Thanks to the team.
                   </p>
                 </div>
               </div>
@@ -1201,11 +1204,13 @@
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Edward</span> Smith</h3>
+                  <h3><span class="different">Josh</span> O'Neill</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    I hired Digitexsol to run ads on Facebook, and
+                    wow, the outcome was amazing! Max was in charge,
+                    and our investment really paid off. The ads were 
+                    super attractive, and they reached exactly the right
+                    people. It totally transformed our online cosmetic store!
                   </p>
                 </div>
               </div>
@@ -1220,11 +1225,13 @@
                     alt="location"
                     class="map-img"
                   />
-                  <h3><span class="different">Olivia</span> Kavin</h3>
+                  <h3><span class="different">Sarah</span> Johnson</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor inci didunt ut labore et dolore magna
-                    aliqua.
+                    Digitex Sol's strategic digital marketing
+                    approach delivered exceptional results.
+                    Our lead generation doubled in just a few
+                    months, and their attention to detail truly
+                    stood out.
                   </p>
                 </div>
               </div>
@@ -1403,7 +1410,7 @@
                 <div class="form-group">
                   <textarea placeholder="Message" rows="4" required></textarea>
                 </div>
-                <a type="submit" class="btn btn-secondary"
+                <a type="submit" class="btn btn-secondary rotating-border-button"
                   >Book Your 10 Minutes Free Consultation
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -1456,7 +1463,7 @@
             </div>
             <div class="col-md-6 col-right rgt-col">
               <div class="buttons">
-                <a href="#" class="btn btn-secondary">
+                <a href="#" class="btn btn-secondary rotating-border-button">
                   Explore More
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
