--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <nav class="navbar navbar-expand-lg custom-header">
         <div class="container">
           <!-- Logo -->
-          <a class="navbar-brand" href="/">
-            <img src="assets/images/logo-icon.png" alt="Logo" />
-          </a>
+            <a class="navbar-brand" href="/">
+              <img src="assets/images/logo-icon.png" alt="Logo" />
+            </a>
 
           <!-- Navbar Toggler for Mobile -->
           <button
@@ -313,7 +313,7 @@
                   </button>
                   <button
                     class="sub-service-btn"
-                    data-image="assets/images/iot.webp"
+                    data-image="assets/images/Iot.webp"
                   >
                     IoT
                   </button>
