--- a/index.html
+++ b/index.html
@@ -48,22 +48,37 @@
             class="collapse navbar-collapse justify-content-center"
             id="navbarNav"
           >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Work</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-            </ul>
+          <ul class="navbar-nav">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Services
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="web-design-&-development.html">Web Design & Development</a></li>
+                <li><a class="dropdown-item" href="#">Service 2</a></li>
+                <li><a class="dropdown-item" href="#">Service 3</a></li>
+                <li><a class="dropdown-item" href="#">Service 4</a></li>
+                <li><a class="dropdown-item" href="#">Service 5</a></li>
+                <li><a class="dropdown-item" href="#">Service 6</a></li>
+                <li><a class="dropdown-item" href="#">Service 7</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+          </ul>          
           </div>
 
           <!-- Right Side Buttons -->
           <div class="d-flex align-items-center">
-            <a href="tel: 123 456 7890" class="btn rotating-border-button"
-              ><i class="fa-solid fa-phone"></i> 123 456 7890</a
+            <a href="tel: +971505087349" class="btn rotating-border-button"
+              ><i class="fa-solid fa-phone"></i> +971 50 508 7349</a
             >
           </div>
         </div>
@@ -1597,8 +1612,7 @@
             <div class="address">
               <h4>Address</h4>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod
+                Dubai : Grosvenor Business Tower, Tecom, Dubai.
               </p>
             </div>
           </div>
